den1-k8s01/warehouse20/ombi/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ombi
  name: ombi
  namespace: warehouse20
spec:
  selector:
    matchLabels:
      app: ombi
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ombi
    spec:
      automountServiceAccountToken: false
      containers:
      - name: ombi
        image: hotio/ombi:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        # securityContext:
        #   runAsUser: 1024
        #   runAsGroup: 100
        volumeMounts:
        - mountPath: /config
          name: config
          subPath: config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: ombi-data
