den1-k8s01/warehouse20/ombi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ombi
  namespace: warehouse20
  labels:
    app: ombi
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: http
      port: 5000
      protocol: TCP
  selector:
    app: ombi
